--- a/src/my/index.html
+++ b/src/my/index.html
@@ -229,7 +229,7 @@
             <br>
             <br><a href="https://my.mlsapro.com" target="_blank" class="meta-address-btn" aria-label="Intro">WE With Wordpress</a>
             <br> 
-            <a href="#" onclick="login()" class="login-btn"><i class="fas fa-sign-in-alt"></i> Connect With along with product.xml</a>
+            <a href="#" onclick="login()" class="login-btn"><i class="fas fa-sign-in-alt"></i> Connect With along with share.txt And product.xml</a>
             <br>
             <a href="#" onclick="signOut()" class="sign-out-btn"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
             <br>
