--- a/src/2/search.html
+++ b/src/2/search.html
@@ -73,78 +73,89 @@
     <main>
         <ul id="results"></ul>
     </main>
-<script>
-    // Simulated file data
-    const files = [
-        'https://mlsapro.com/Book1.xlsx',
-        'https://mlsapro.com/Book2.xlsx',
-        'https://mlsapro.com/Book3%201.xlsx',
-        'https://mlsapro.com/Book3.xlsx',
-        'https://mlsapro.com/Book4.xlsx',
-        'https://mlsapro.com/Book5.xlsx',
-        'https://mlsapro.com/Book6.xlsx',
-        'https://mlsapro.com/Book7.xlsx',
-        'https://mlsapro.com/Copy%20of%20Book2.xlsx',
-        'https://mlsapro.com/Copy%20of%20Book4%20(1).xlsx',
-        'https://mlsapro.com/Copy%20of%20Book4%20(2)%20(1).xlsx',
-        'https://mlsapro.com/Copy%20of%20Book4%20(2).xlsx',
-        'https://mlsapro.com/Copy%20of%20Book4.xlsx',
-        'https://mlsapro.com/2/KeysExport%20(1).xml',
-        'https://mlsapro.com/2/book.html',
-        'https://mlsapro.com/2/bookmarks_8_22_24.html',
-        'https://mlsapro.com/2/chrome.csv',
-        'https://mlsapro.com/2/google.csv',
-        'https://mlsapro.com/2/new',
-        'https://mlsapro.com/2/search.html',
-        'https://mlsapro.com/colour',
-        'https://mlsapro.com/blogs',
-        'https://mlsapro.com/home',
-        'https://mlsapro.com/my',
-        'https://my.mlsapro.com/Youngest%20Microsoft%20Pro%20at%2015!.mp4',
-        'https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc?wt.mc_id=studentamb_281705',
-        'https://my.mlsapro.com/blogs',
-        'https://my.mlsapro.com/blend',
-        'https://my.mlsapro.com/colour',
-        'https://my.mlsapro.com/colour/effect.html',
-        'https://my.mlsapro.com/colour/sketch.html',
-        'https://purple-tree-026ae2e10.5.azurestaticapps.net/',
-        'https://brave-plant-0df5a7c1e.5.azurestaticapps.net/',
-        'https://delightful-ocean-00ca65510.5.azurestaticapps.net',
-        'https://gentle-pebble-01e938610.4.azurestaticapps.net/',
-        'https://gray-beach-0792e3b10.5.azurestaticapps.net/',
-        'https://my.mlsapro.com/deck.pptx',
-        'https://my.mlsapro.com/deck1.pptx',
-        'https://my.mlsapro.com/windows.pptx',
-        'https://my.mlsapro.com/meta.txt',
-        'https://my.mlsapro.com/srmapofmain.txt',
-        'https://my.mlsapro.com/map.txt',
-        'https://my.mlsapro.com/pass.txt'
-    ];
+    <script>
+        // Simulated file data
+        const files = [
+            'https://mlsapro.com/Book1.xlsx',
+            'https://mlsapro.com/Book2.xlsx',
+            'https://mlsapro.com/Book3%201.xlsx',
+            'https://mlsapro.com/Book3.xlsx',
+            'https://mlsapro.com/Book4.xlsx',
+            'https://mlsapro.com/Book5.xlsx',
+            'https://mlsapro.com/Book6.xlsx',
+            'https://mlsapro.com/Book7.xlsx',
+            'https://mlsapro.com/Copy%20of%20Book2.xlsx',
+            'https://mlsapro.com/Copy%20of%20Book4%20(1).xlsx',
+            'https://mlsapro.com/Copy%20of%20Book4%20(2)%20(1).xlsx',
+            'https://mlsapro.com/Copy%20of%20Book4%20(2).xlsx',
+            'https://mlsapro.com/Copy%20of%20Book4.xlsx',
+            'https://mlsapro.com/2/KeysExport%20(1).xml',
+            'https://mlsapro.com/2/book.html',
+            'https://mlsapro.com/2/bookmarks_8_22_24.html',
+            'https://mlsapro.com/2/chrome.csv',
+            'https://mlsapro.com/2/google.csv',
+            'https://mlsapro.com/2/new',
+            'https://mlsapro.com/2/search.html',
+            'https://mlsapro.com/colour',
+            'https://mlsapro.com/blogs',
+            'https://mlsapro.com/home',
+            'https://mlsapro.com/my',
+            'https://my.mlsapro.com/Youngest%20Microsoft%20Pro%20at%2015!.mp4',
+            'https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc?wt.mc_id=studentamb_281705',
+            'https://my.mlsapro.com/blogs',
+            'https://my.mlsapro.com/blend',
+            'https://my.mlsapro.com/colour',
+            'https://my.mlsapro.com/colour/effect.html',
+            'https://my.mlsapro.com/colour/sketch.html',
+            'https://purple-tree-026ae2e10.5.azurestaticapps.net/',
+            'https://brave-plant-0df5a7c1e.5.azurestaticapps.net/',
+            'https://delightful-ocean-00ca65510.5.azurestaticapps.net',
+            'https://gentle-pebble-01e938610.4.azurestaticapps.net/',
+            'https://gray-beach-0792e3b10.5.azurestaticapps.net/',
+            'https://my.mlsapro.com/deck.pptx',
+            'https://my.mlsapro.com/deck1.pptx',
+            'https://my.mlsapro.com/windows.pptx',
+            'https://my.mlsapro.com/meta.txt',
+            'https://my.mlsapro.com/srmapofmain.txt',
+            'https://my.mlsapro.com/map.txt',
+            'https://my.mlsapro.com/pass.txt',
+            'https://chat.whatsapp.com/Djp2Wfn7gjT5x5MuYSuclt',
+            'https://chat.whatsapp.com/GZWAi6ea7mh0IVpnACMh3t',
+            'https://chat.whatsapp.com/KcKHRbjuSAo7NbBuZEf6GI'
+        ];
 
-    function searchFiles() {
-        const query = document.getElementById('searchInput').value.toLowerCase();
-        const results = document.getElementById('results');
+        function searchFiles() {
+            const query = document.getElementById('searchInput').value.toLowerCase();
+            const results = document.getElementById('results');
 
-        // Clear previous results
-        results.innerHTML = '';
+            // Clear previous results
+            results.innerHTML = '';
 
-        // Search through the files
-        const filteredFiles = files.filter(file => file.toLowerCase().includes(query));
+            // Search through the files
+            const filteredFiles = files.filter(file => file.toLowerCase().includes(query));
 
-        // Display results
-        filteredFiles.forEach(file => {
-            const li = document.createElement('li');
-            const a = document.createElement('a');
-            a.href = file;  // Use the file URL as is
-            a.textContent = file;
-            li.appendChild(a);
-            results.appendChild(li);
-        });
+            // Display results
+            filteredFiles.forEach(file => {
+                const li = document.createElement('li');
+                const a = document.createElement('a');
+                a.href = file;  // Use the file URL as is
+                a.textContent = file;
+                li.appendChild(a);
+                results.appendChild(li);
+            });
 
-        if (filteredFiles.length === 0) {
-            results.innerHTML = '<li>No files found.</li>';
+            if (filteredFiles.length === 0) {
+                results.innerHTML = '<li>No files found.</li>';
+            }
         }
-    }
-</script>
+
+        // Add event listener for Enter key
+        document.getElementById('searchInput').addEventListener('keypress', function(event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                searchFiles();
+            }
+        });
+    </script>
 </body>
 </html>
